Fix loading of Artistic Shape objects saved by Krita 3.x

In Krita 3.x we used hardcoded SVG and Font resolution (90 and 96ppi
correspondingly). So we should resemble that behavior in newer
versions.

BUG:391351